# catalog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
catalog/management/: README.md
catalog/management/commands/: drop.py  dump_data.py  load_data.py
catalog/migrations/: 0001_initial.py  0002_contactdetails.py  0003_alter_category_options_alter_contactdetails_options_and_more.py  0004_alter_feedback_options_alter_product_options.py  0005_alter_contactdetails_options_and_more.py  0006_blogarticle_alter_contactdetails_country_and_more.py  0007_alter_blogarticle_views_count.py  0008_alter_blogarticle_is_published.py  0009_alter_blogarticle_slug.py  0010_alter_blogarticle_slug.py  0011_fieldstest.py  0012_delete_fieldstest.py  0013_version.py
catalog/models/: __init__.py  blog.py  catalog.py  other.py
catalog/services/: crud.py
catalog/templatetags/: media_path.py
config/: settings.py  urls.py
data/: README.md  catalog_dump_data.json
static/: README.md
static/css/: custom.css
templates/catalog/: accept_add.html  accept_del.html  add_product.html  base.html  blogarticle_confirm_delete.html  blogarticle_detail.html  blogarticle_form.html  blogarticle_list.html  contact_base.html  contacts.html  home.html  home_base.html  product_detail.html  product_list.html  simple_form.html  version_form.html
